# rllm

./: Cargo.toml  README.md
examples/: anthropic_example.rs  embedding_example.rs  evaluation_example.rs  multi_backend_example.rs  ollama_example.rs  openai_example.rs  phind_example.rs  validator_example.rs
src/: builder.rs  error.rs  lib.rs  validated_llm.rs
src/backends/: anthropic.rs  deepseek.rs  mod.rs  ollama.rs  openai.rs  phind.rs  xai.rs
src/chain/: multi.rs
src/evaluator/: mod.rs
