[package]
name = "rllm"
version = "1.1.4"
edition = "2021"
description = "Unifies multiple LLM backends in Rust."
license = "MIT"
authors = ["Tristan Granier <graniet75@gmail.com>"]
repository = "https://github.com/graniet/rllm"
documentation = "https://docs.rs/rllm"
homepage = "https://github.com/graniet/rllm"

[features]
default = []
openai = []
anthropic = []
ollama = []
deepseek = []
xai = []
phind = []
google = []

[dependencies]
llm = {version = "1.0.3", features = ["openai", "anthropic", "ollama", "deepseek", "xai", "phind", "google"]}
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde_json = "1.0"

[dev-dependencies]
